Objective Caml 3.12.1:
----------------------

- Changed default minor heap size from 32k to 256k words.

Bug fixes:
- PR#4794, PR#4959: call annotations not generated by ocamlopt
- PR#4967: ocamlbuild passes wrong switches to ocamldep through menhir
- PR#5039: ocamlbuild should use '-linkpkg' only when linking programs
- PR#5095: ocamlbuild ignores some tags when building bytecode objects
- PR#5100: ocamlbuild always rebuilds a 'cmxs' file
- PR#5103: build and install objinfo when building with ocamlbuild
- PR#5110: invalid module name when using optional argument
- PR#5165: ocamlbuild does not pass '-thread' option to ocamlfind
- PR#5177: Gc.compact implies Gc.full_major

Feature wishes:
- PR#5065: added '-ocamldoc' option to ocamlbuild
- PR#5180: improved instruction selection for float operations on amd64


Objective Caml 3.12.0:
----------------------

(Changes that can break existing programs are marked with a "*"  )

Language features:
- Shorthand notation for records: in expressions and patterns,
    { lbl } stands for { lbl = lbl } and { M.lbl } for { M.lbl = lbl }
- Record patterns of the form { lbl = pat; _ } to mark that not all
  labels are listed, purposefully.  (See new warning below.)
- Explicit naming of a generic type; in an expression
  "fun ... (type t) ... -> e", the type t is considered abstract in its
  scope (the arguments that follow it and the body of the function),
  and then replaced by a fresh type variable. In particular, the type
  t can be used in contexts where a type variable is not allowed
  (e.g. for defining an exception in a local module).
- Explicit polymorphic types and polymorphic recursion. In let
  definitions, one can write an explicit polymorphic type just
  immediately the function name; the polymorphism will be enforced,
  and recursive calls may use the polymorphism.
  The syntax is the same as for polymorphic methods:
    "let [rec] <ident> : 'a1 ... 'an. <typexp> = ..."
- First-class packages modules.