@@ -4,6 +4,7 @@ Objective Caml 3.12.1:
 - Changed default minor heap size from 32k to 256k words.
 
 Bug fixes:
+- PR#4380: ocamlbuild should not use tput on windows
 - PR#4794, PR#4959: call annotations not generated by ocamlopt
 - PR#4967: ocamlbuild passes wrong switches to ocamldep through menhir
 - PR#5039: ocamlbuild should use '-linkpkg' only when linking programs
